--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     image: postgres:15
@@ -21,7 +19,7 @@ services:
 
   web:
     build: .
-    command: gunicorn locations_map.wsgi:application --bind 0.0.0.0:8000
+    # command: gunicorn locations_map.wsgi:application --bind 0.0.0.0:8000
     ports:
       - "8000:8000"
     env_file:
